--- a/src/plugin.html
+++ b/src/plugin.html
@@ -203,7 +203,7 @@
             shadowSize: [30, 30],
         });
 
-        const bue_icon = L.icon({
+        const blue_icon = L.icon({
             className: 'resources-icon',
 			iconUrl: 'https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-blue.png',
             shadowUrl: 'https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/images/marker-shadow.png',
