combined swell images

--- a/src/plugin.html
+++ b/src/plugin.html
@@ -354,7 +354,7 @@
 
 			swell_marker.bindTooltip("<h5>" + swell_name + "</h5>");
 
-			swell_marker.bindPopup('<img src = ' + swell_history + '>', {
+			swell_marker.bindPopup('<img src = ' + swell_current + '>','<img src = ' + swell_history + '>', {
 				minWidth: 580,
 			});
 
