alignment of swell images

--- a/src/plugin.html
+++ b/src/plugin.html
@@ -354,10 +354,14 @@
 
 			swell_marker.bindTooltip("<h5>" + swell_name + "</h5>");
 
-			swell_marker.bindPopup(
-                '<img src=' + swell_current + ' style="opacity: 1;">' +
-                '<img src=' + swell_history + ' style="opacity: 1;">', {
-				minWidth: 580,
+            swell_marker.bindPopup(
+                '<style> div.container {display:inline-block;} p {text-align:center;} </style>' +
+                '<div class = "container">' +
+                    '<img src=' + swell_current + ' style="float:left; opacity: 1; width:45%;"/>' +
+                    '<img src=' + swell_history + ' style="float:right; opacity: 1; width:55%;"/>' +
+                '</div>' , {
+
+                minWidth: 800,
 			});
 
 			return swell_marker;
