fixed obs display

--- a/src/plugin.html
+++ b/src/plugin.html
@@ -415,8 +415,8 @@
 
 			obs_marker.bindTooltip("<h5>obs: " + obs_name + "</h5>");
 
-			obs_marker.bindPopup('<img src = ' + obs_link + '/>' + '<br>', {
-				minWidth: 580,
+            obs_marker.bindPopup('<img src = ' + obs_link + ' style="width:100%;"/>' + '<br>', {
+				minWidth: 700,
 			});
 
 			return obs_marker;
