--- a/src/plugin.html
+++ b/src/plugin.html
@@ -7,7 +7,7 @@
         import {map} from '@windy/map';
         import _ from '@windy/utils';
 		import picker from '@windy/picker';
-		import detail from '@windy/detail';
+		//import {detail} from '@windy/detail';
 		import store from '@windy/store';
 		import bcast from '@windy/broadcast';
 
